5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4146/executions/1638_87.log
== TEST (2019-04-11 11:33:58) 
-- CODE:
a = int(input("A: "))
b = int(input("B: "))
c = int(input("C: "))

print(min(a, b, c))
-- OUTPUT:
35
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 11:34:09) 
-- CODE:
a = int(input("A: "))
b = int(input("B: "))
c = int(input("C: "))

print(min(a, b, c))
-- EXECUTION TIME:
0.198824
-- TEST CASE 1:
---- input:
258
788
35
---- correct output:
35
---- user output:
35
-- TEST CASE 2:
---- input:
99
55
77
---- correct output:
55
---- user output:
55
-- TEST CASE 3:
---- input:
123
456
789
---- correct output:
123
---- user output:
123
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-23 09:57:53) 
-- CODE:
a = int(input("A: "))
b = int(input("B: "))
c = int(input("C: "))

if (a > b > c):
	
-- EXECUTION TIME:
0.145441
-- ERROR:
  File "/home/codebench/codes/1638/87/main.py", line 7
    
     ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 09:58:50) 
-- CODE:
a = int(input("A: "))
b = int(input("B: "))
c = int(input("C: "))

print(min(a, b, c))
-- OUTPUT:
35
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-23 09:58:56) 
-- CODE:
a = int(input("A: "))
b = int(input("B: "))
c = int(input("C: "))

print(min(a, b, c))
-- EXECUTION TIME:
0.152584
-- TEST CASE 1:
---- input:
258
788
35
---- correct output:
35
---- user output:
35
-- TEST CASE 2:
---- input:
99
55
77
---- correct output:
55
---- user output:
55
-- TEST CASE 3:
---- input:
123
456
789
---- correct output:
123
---- user output:
123
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
